--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">effects</a>
+    <a class="navbar-brand" [routerLink]="['home']">effects</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -8,17 +8,19 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
 
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Inicio</a>
+            <li class="nav-item active" routerLinkActive="active">
+                <a class="nav-link" [routerLink]="['home']">Inicio</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Usuario</a>
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link" [routerLink]="['user']">Usuario</a>
             </li>
 
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="id usuario..." aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="button">Buscar</button>
-        </form>
+        <div class="form-inline my-2 my-lg-0">
+            <input #txtInput class="form-control mr-sm-2" type="search" placeholder="id usuario..." aria-label="Search"
+                (keyup.enter)="gotoUser(txtInput.value)" (focus)="txtInput.select()">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="button"
+                (click)="gotoUser(txtInput.value)">Buscar</button>
+        </div>
     </div>
 </nav>
