--- a/src/app/users/user/user.component.html
+++ b/src/app/users/user/user.component.html
@@ -1,1 +1,24 @@
-<p>user works!</p>
+<div *ngIf="loading" class="alert alert-success text-center mt-2" role="alert">
+    <h4 class="alert-heading">Cargando...</h4>
+    <p>
+        <i class="fa fa-sync fa-spin fa-2x"></i>
+    </p>
+</div>
+
+<div *ngIf="error" class="alert alert-danger text-center mt-2" role="alert">
+    <h4 class="alert-heading">Error al obtener información del usuario {{id}}</h4>
+    <p> {{error.message}} </p>
+</div>
+
+
+<div *ngIf="user !== null" class="row mt-2">
+    <div class="col-4">
+        <img [src]="user.avatar" alt="avatar" class="img-thumbnail">
+    </div>
+    <div class="col">
+        <ul class="list-group">
+            <li class="list-group-item"><b>Nombre: </b>{{user.first_name}}</li>
+            <li class="list-group-item"><b>Apellido: </b>{{user.last_name}}</li>
+        </ul>
+    </div>
+</div>
